5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1573_1560.log
== TEST (2019-03-13 14:10:48) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra"
print(.lower())
-- ERROR:
File "XXXX", line 2
    print(.lower())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:11:33) 
-- CODE:
string = ()"Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra")
print(.lower())
-- ERROR:
File "XXXX", line 1
    string = ()"Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra")
                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:12:00) 
-- CODE:
string = ("Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra")
print(.lower())
-- ERROR:
File "XXXX", line 2
    print(.lower())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:12:19) 
-- CODE:
string = ("Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra")
print(."lower()")
-- ERROR:
File "XXXX", line 2
    print(."lower()")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:13:07) 
-- CODE:
string = ( "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra" )
print(.lower())
-- ERROR:
File "XXXX", line 2
    print(.lower())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:13:23) 
-- CODE:
string = ( "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra" )
print(.lower())
-- ERROR:
File "XXXX", line 2
    print(.lower())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:16:05) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra")
print(string.lower())
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra")
                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:16:07) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra")
print(string.lower())
-- EXECUTION TIME:
0.175236
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra")
                                                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:16:16) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra"
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu1815, na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:16:18) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.154198
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:16:42) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra"
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu1815, na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:16:46) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra"
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu1815, na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:16:51) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.173292
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:17:06) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra"
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu1815, na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:17:17) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu1815, na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.13649
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:17:53) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:17:59) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.232728
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:18:14) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:18:15) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.134827
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
